# mediator/src/main/kotlin/no/nav/dagpenger/rapportering/personregister/mediator/api/PersonstatusApi.kt
@@ -9,8 +9,11 @@ import io.ktor.server.routing.get
 import io.ktor.server.routing.route
 import io.ktor.server.routing.routing
 import mu.KotlinLogging
+import no.nav.dagpenger.rapportering.personregister.api.models.PersonResponse
+import no.nav.dagpenger.rapportering.personregister.api.models.StatusResponse
 import no.nav.dagpenger.rapportering.personregister.mediator.api.auth.ident
 import no.nav.dagpenger.rapportering.personregister.mediator.db.PersonRepository
+import no.nav.dagpenger.rapportering.personregister.modell.Status
 
 private val logger = KotlinLogging.logger {}
 
@@ -23,8 +26,22 @@ internal fun Application.personstatusApi(personRepository: PersonRepository) {
                     val ident = call.ident()
                     personRepository
                         .hentPerson(ident)
-                        ?.also { call.respond(HttpStatusCode.OK, it) }
-                        ?: call.respond(HttpStatusCode.NotFound, "Finner ikke status for person")
+                        ?.also {
+                            call.respond(
+                                HttpStatusCode.OK,
+                                PersonResponse(
+                                    ident = it.ident,
+                                    status = StatusResponse.valueOf(it.status.name),
+                                ),
+                            )
+                        }
+                        ?: call.respond(
+                            HttpStatusCode.OK,
+                            PersonResponse(
+                                ident = ident,
+                                status = StatusResponse.valueOf(Status.IKKE_REGISTRERT.name),
+                            ),
+                        )
                 }
             }
         }
